--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "prisma": "^4.12.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "express": "^4.18.2"
   }
 }
