--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "tsx watch src/server.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "prisma": "^4.12.0",
