--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
     "prisma": "^4.12.0",
     "tsx": "^3.12.6",
@@ -18,6 +19,7 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "zod": "^3.21.4"
   }
 }
